# grade-system

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/data_creation/: CMakeLists.txt
apps/grader/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/class_system/: CMakeLists.txt  class_system.pb.cc  class_system.pb.h
libs/wrappers/: CMakeLists.txt  wrapers.cpp  wrappers.h
proto/: README  class_system.proto
tests/: CMakeLists.txt
tests/class_system/: CMakeLists.txt  test_system.cpp
